# phmm-tree-improved

./: .gitignore  CMakeLists.txt  FILENAME_COLLISION_FIX.md  HMMTree.cpp  HMMTree.h  IMPLEMENTATION_SUMMARY.md  KITSCH_IMPLEMENTATION_SUMMARY.md  KITSCH_PARALLELIZATION.md  Makefile  NAMESPACE_CONFLICTS_FIX.md  PARALLELIZATION.md  PRC_IMPLEMENTATION_COMPLETE.md  PRC_PARALLELIZATION.md  README.md  align_deal.cpp  class_functions.cpp  fitch.c  fitch.h  hhsuite.cpp  hmm_deal.cpp  kitsch.c  kitsch.h  matrix_deal.cpp  neighbor.c  neighbor.h  parallel.conf  performance_summary.md  performance_test.sh  phylip.c  phylip.h  phylip_draw_tree.cpp  prc_deal.cpp  prc_performance_test.sh  process_alignments.cpp  process_hmms.cpp  process_matrices.cpp  process_prc.cpp  process_usearch.cpp  public_functions.cpp  test_collision_fix.cpp  (+7 more)
.github/workflows/: build.yml
